[package]
name = "multicall"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.8.1"
alloy-sol-types = "0.8.1"
alloy-sol-macro = "0.8.1"
stylus-sdk = { version = "0.8.1", default-features = false}

[lib]
crate-type = ["lib", "cdylib"]

[features]
reentrant = ["stylus-sdk/reentrant"]